--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="head"></div>
 		<div class="name">
-				<a href="home.html"><img src="images/iconicc.png" style="width:80px; height:80px">SWEETEST SENSATIONS</a>
+				<a href="index.html"><img src="images/iconicc.png" style="width:80px; height:80px">SWEETEST SENSATIONS</a>
 		</div>
 		<div class="menu">
 			<ul>
