--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="head"></div>
 		<div class="name">
-				<a href="home.html"><img src="images/iconicc.png" style="width:100px; height:100px">SWEETEST SENSATIONS</a>
+				<a href="index.html"><img src="images/iconicc.png" style="width:100px; height:100px">SWEETEST SENSATIONS</a>
 		</div>
 		<div class="menu">
 			<ul>
